[package]
name = "qlib"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/gaoyia/qlib"
readme = "README.md"
homepage = "https://github.com/gaoyia/qlib"
keywords = [
    "quick-lib",
    "std-lib-extension",
    "qlib"
]
description = "This is a simple library developed using the Rust standard util library. | 这是一个用rust标准库开发的简单的工具Lib"
license = "MIT"

[dependencies]


[[test]]
name = "thread_pool_test"
path = "tests/thread_pool_test.rs"

